--- a/pom.xml
+++ b/pom.xml
@@ -89,11 +89,22 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<!-- 7、整合lombok-->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.10</version>
+		</dependency>
 		<!-- 3、整合Redis缓存支持 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+		<!-- 10、session：spring session 与redis应用基本环境配置,需要开启redis后才可以使用，不然启动Spring boot会报错 -->
+		<!--<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>-->
 		<!-- 5、整合quartz定时任务 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -112,19 +123,13 @@
 			<version>2.4</version>
 			<classifier>jdk15</classifier>
 		</dependency>
-        <!-- 7、整合lombok-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.10</version>
-        </dependency>
 		<!-- 8、整合shiro-->
 		<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-spring</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-		<!-- excel  Workbook  @Excel-->
+		<!-- 9、excel  Workbook  @Excel-->
 		<dependency>
 			<groupId>cn.afterturn</groupId>
 			<artifactId>easypoi-annotation</artifactId>
