--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,18 +32,8 @@ spring:
           pool-prepared-statements: false
           max-pool-prepared-statement-per-connection-size: 20
 
-    redis:
-         host: 127.0.0.1
-         port: 6379
-         timeout: 20000      #连接超时时间(ms)
-         pool:
-           max-active: 8     #连接池最大连接数(负数表示无限制)
-           min-adle: 0
-           max-idle: 8        #连接池中的最大空闲连接数
-           max-wait: -1       #连接池最大阻塞等待时间(ms)(负数表示无限制)
-
     profiles:
-        include: quartz
+        include: quartz,redis
 
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
