--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,39 +1,37 @@
 server:
   port: 8088
 
+  servlet:
+    session:
+      timeout: "PT10M"     # session有效时长为10分钟
+
+
 spring:
     datasource:
-        name: mysql_test
-        type: com.alibaba.druid.pool.DruidDataSource
-        #druid相关配置
-        druid:
-          #监控统计拦截的filters
-          filters: stat
-          driver-class-name: com.mysql.jdbc.Driver
-          #基本属性
-          url: jdbc:mysql://127.0.0.1:3306/springboottest?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-          username: root
-          password: root
-          #配置初始化大小/最小/最大
-          initial-size: 1
-          min-idle: 1
-          max-active: 20
-          #获取连接等待超时时间
-          max-wait: 60000
-          #间隔多久进行一次检测，检测需要关闭的空闲连接
-          time-between-eviction-runs-millis: 60000
-          #一个连接在池中最小生存的时间
-          min-evictable-idle-time-millis: 300000
-          validation-query: SELECT 'x'
-          test-while-idle: true
-          test-on-borrow: false
-          test-on-return: false
-          #打开PSCache，并指定每个连接上PSCache的大小。oracle设为true，mysql设为false。分库分表较多推荐设置为false
-          pool-prepared-statements: false
-          max-pool-prepared-statement-per-connection-size: 20
+      db1:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        #基本属性
+        jdbc-url: jdbc:mysql://127.0.0.1:3306/springboottest?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=GMT&useSSL=false
+        username: root
+        password: root
+        initial-size: 5
+        max-idle: 10
+        max-wait: 10000
+        min-idle: 5
+      db2:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        #基本属性
+        jdbc-url: jdbc:mysql://127.0.0.1:3306/springboottest1?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=GMT&useSSL=false
+        username: root
+        password: root
+        initial-size: 5
+        max-idle: 10
+        max-wait: 10000
+        min-idle: 5
 
     profiles:
-        include: quartz,redis
+        include: redis
+
 
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
@@ -50,3 +48,5 @@ pagehelper:
 
 swagger:
     enable: true
+
+
