--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<!-- 打war包时：需移除嵌入式tomcat插件1111 -->
+			<!-- 打war包时：需移除嵌入式tomcat插件1111a -->
 			<!--<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
