--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ spring:
         min-idle: 5
 
     profiles:
-        include: redis
+        include: redis,rabbitMQ
     cache:
         #ehcache配置文件路径
         ehcache:
